--- a/build.gradle
+++ b/build.gradle
@@ -9,12 +9,14 @@ buildscript {
     dependencies {
         classpath 'org.akhikhl.gretty:gretty:+'
         classpath "gradle.plugin.com.palantir.gradle.docker:gradle-docker:0.13.0"
+        classpath "io.franzbecker:gradle-lombok:1.8"
     }
 }
 
 apply plugin: 'java'
 apply plugin: 'org.akhikhl.gretty'
 apply plugin: "com.palantir.docker-run"
+apply plugin: "io.franzbecker.gradle-lombok"
 
 group = 'org.sourceforge.plantuml'
 version = '1-SNAPSHOT'
@@ -36,11 +38,10 @@ dependencies {
     compile 'net.sourceforge.plantuml:plantuml:2017.09'
     compile 'com.sparkjava:spark-core:2.5.5'
     compile 'org.webjars:codemirror:3.21'
+    compile 'org.slf4j:slf4j-simple:1.7.7'
     testCompile 'junit:junit:4.12'
     testCompile 'httpunit:httpunit:1.7'
     testCompile 'rhino:js:1.7R2'
-
-
 }
 
 
